# mpaligner

./: CMakeLists.txt
src/: mpAlign.c  mpAlign.h  mpaligner.c
